VSE Adjustment crashes on blank frame #47900

Closed
opened 2016-03-23 17:04:54 +01:00 by John Grigni · 7 comments

System Information
Mac OSX 10.11.13
MacBook Pro (Retina, 13-inch, Late 2013)
Intel Iris 1536 MB

Blender Version
Broken: (2.77)
Worked: (optional)

In VSE, Crash when there is an Adjustment Strip and nothing below it

Put an adjustment layer in a blank VSE, give it an adjustment value (like multiply 1.2) and go to a frame where there is nothing beneath it.vseAdjustmentBug.blend

**System Information** Mac OSX 10.11.13 MacBook Pro (Retina, 13-inch, Late 2013) Intel Iris 1536 MB **Blender Version** Broken: (2.77) Worked: (optional) In VSE, Crash when there is an Adjustment Strip and nothing below it Put an adjustment layer in a blank VSE, give it an adjustment value (like multiply 1.2) and go to a frame where there is nothing beneath it.[vseAdjustmentBug.blend](https://archive.blender.org/developer/F298096/vseAdjustmentBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnGrigni-4

Added subscriber: @JohnGrigni-4

#48676 was marked as duplicate of this issue

#48676 was marked as duplicate of this issue

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 376eb77fd7

This issue was referenced by 376eb77fd7c97cbec27b824dc751a318e526a9eb

This issue was referenced by 0a3792a65b

This issue was referenced by 0a3792a65b3ed039457f85c8538e822d6c5df222

Added subscribers: @ideasman42, @Blendify, @Pugnippets

Added subscribers: @ideasman42, @Blendify, @Pugnippets
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47900
No description provided.