Fix T47900: VSE adjustment crashes on blank frame