source/blender/blenkernel/intern/sequencer.c
@@ -3694,8 +3694,9 @@ static ImBuf *seq_render_strip_stack(const SeqRenderData *context, ListBase *seq
 					ImBuf *ibuf2 = out;
 
 					out = seq_render_strip_stack_apply_effect(context, seq, cfra, ibuf1, ibuf2);
-
-					IMB_metadata_copy(out, ibuf2);
+					if (out) {
+						IMB_metadata_copy(out, ibuf2);
+					}
 
 					IMB_freeImBuf(ibuf1);
 					IMB_freeImBuf(ibuf2);
